--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "electron-extension-installer": "^1.0.4",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "msmc": "^4.1.0",
     "octokit": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -123,7 +124,6 @@
     "@typescript-eslint/parser": "^5.51.0",
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
-    "concurrently": "^7.6.0",
     "core-js": "^3.27.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
