--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bush-launcher",
   "productName": "Bush Launcher",
-  "version": "0.4.1",
+  "version": "0.4.3",
   "private": true,
   "description": "The Minecraft bush launcher",
   "author": "Gagafeee",
@@ -90,8 +90,9 @@
     }
   },
   "dependencies": {
-    "@electron/remote": "^2.0.9",
-    "@xmcl/installer": "^4.4.0",
+    "@ramonak/react-progress-bar": "^5.0.3",
+    "@types/adm-zip": "^0.5.0",
+    "adm-zip": "^0.5.10",
     "appdata-path": "^1.0.0",
     "axios": "^1.3.5",
     "electron-debug": "^3.2.0",
@@ -103,7 +104,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
@@ -122,6 +124,9 @@
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "@xmcl/core": "^2.11.2",
+    "@xmcl/installer": "^5.0.3",
+    "@xmcl/task": "^4.0.5",
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
     "core-js": "^3.27.2",
@@ -130,7 +135,7 @@
     "css-minimizer-webpack-plugin": "^4.2.2",
     "detect-port": "^1.5.1",
     "electron": "^23.0.0",
-    "electron-builder": "^23.6.0",
+    "electron-builder": "^24.4.0",
     "electron-devtools-installer": "^3.2.0",
     "electronmon": "^2.0.2",
     "eslint": "^8.33.0",
@@ -145,7 +150,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "extract-zip": "^2.0.1",
     "file-loader": "^6.2.0",
+    "find-java-home": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.2",
