--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.3",
     "@types/adm-zip": "^0.5.0",
+    "@xmcl/user": "^3.0.3",
     "adm-zip": "^0.5.10",
     "appdata-path": "^1.0.0",
     "axios": "^1.3.5",
