--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@types/adm-zip": "^0.5.0",
     "@xmcl/user": "^3.0.3",
     "adm-zip": "^0.5.10",
+    "antd": "^5.6.1",
     "appdata-path": "^1.0.0",
     "axios": "^1.3.5",
     "electron-debug": "^3.2.0",
