--- a/package.json
+++ b/package.json
@@ -3,30 +3,15 @@
   "productName": "Bush Launcher",
   "version": "0.4.4",
   "private": true,
-  "description": "The Minecraft bush launcher",
-  "author": "Gagafeee",
-  "keywords": [
-    "electron",
-    "boilerplate",
-    "react",
-    "typescript",
-    "ts",
-    "sass",
-    "webpack",
-    "hot",
-    "reload"
-  ],
+  "description": "The Minecraft Bush launcher",
+  "author": {
+    "name": "Gagafeee",
+    "url": "https://github.com/Gagafeee"
+  },
   "bugs": {
     "url": "https://github.com/Gagafeee/BushLauncher/issues"
   },
   "license": "MIT",
-  "contributors": [
-    {
-      "name": "Amila Welihinda",
-      "email": "amilajack@gmail.com",
-      "url": "https://github.com/amilajack"
-    }
-  ],
   "main": "./src/main/main.ts",
   "scripts": {
     "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
@@ -34,6 +19,7 @@
     "build:renderer": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.prod.ts",
     "postinstall": "ts-node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.ts",
     "lint": "cross-env NODE_ENV=development eslint . --ext .js,.jsx,.ts,.tsx",
+    "packageDebug": "npx cross-env DEBUG_PROD=true npm run package",
     "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir release/app",
     "start": "ts-node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
@@ -42,7 +28,6 @@
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
     "test": "jest"
   },
-  "browserslist": [],
   "prettier": {
     "singleQuote": true,
     "overrides": [
@@ -91,23 +76,21 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.3",
-    "@types/adm-zip": "^0.5.0",
     "@xmcl/user": "^3.0.3",
     "adm-zip": "^0.5.10",
     "antd": "^5.6.1",
     "appdata-path": "^1.0.0",
-    "axios": "^1.3.5",
+    "axios": "1.4.0",
     "electron-debug": "^3.2.0",
-    "electron-extension-installer": "^1.0.4",
+    "electron-extension-installer": "1.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
     "msmc": "^4.1.0",
-    "octokit": "^2.0.14",
+    "octokit": "2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-toastify": "^9.1.2",
-    "uninstall": "^0.0.0"
+    "react-toastify": "9.1.3"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
@@ -117,6 +100,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/adm-zip": "^0.5.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
     "@types/react": "^18.0.27",
@@ -198,9 +182,6 @@
           "arm64",
           "x64"
         ]
-      },
-      "win": {
-        "icon": "./src/resources/graphics/icon.png"
       },
       "type": "distribution",
       "hardenedRuntime": true,
