--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bushlauncher",
-  "version": "0.4.1",
+  "name": "bush-launcher",
+  "productName": "Bush Launcher",
+  "version": "0.4.4",
   "description": "The minecraft Bush Launcher",
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "Gagafeee",
+    "url": "https://github.com/Gagafeee"
   },
   "main": "./dist/main/main.js",
   "scripts": {
@@ -15,6 +15,6 @@
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
   "dependencies": {
-    "electron-extension-installer": "^1.0.4"
+    "electron-extension-installer": "1.2.0"
   }
 }
