--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.3",
+    "@types/uuid": "^9.0.2",
     "@xmcl/user": "^3.0.3",
     "adm-zip": "^0.5.10",
     "antd": "^5.6.4",
@@ -90,7 +91,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-toastify": "9.1.3"
+    "react-toastify": "9.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
