--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     "axios": "1.4.0",
     "electron-debug": "^3.2.0",
     "electron-extension-installer": "1.2.0",
-    "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "is-electron-renderer": "^2.0.1",
     "msmc": "^4.1.0",
     "octokit": "2.1.0",
     "react": "^18.2.0",
@@ -125,6 +125,7 @@
     "electron": "^23.0.0",
     "electron-builder": "^24.4.0",
     "electron-devtools-installer": "^3.2.0",
+    "electron-log": "^4.4.8",
     "electronmon": "^2.0.2",
     "eslint": "^8.33.0",
     "eslint-config-airbnb-base": "^15.0.0",
